# simple-wasm-2023

./: Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
js/: index.html  index.js  main.css
src/: lib.rs
