[package]
name = "very-simple-wasm-2023"
description = "A sample WASM app using wasm-pack-plugin"
version = "0.1.1"
authors = ["minagawa <minag@tokyo800.jp>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
js-sys = "0.3.58"
wasm-bindgen = "0.2.45"

[dependencies.web-sys]
version = "0.3.58"
features = [
  'console',
  'Document',
  'DomRect',
  'Element',
  'Headers',
  'HtmlElement',
  'Node',
  'Window',
]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.7"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
